--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
@@ -25,12 +26,13 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-network-info": "^5.2.1",
-    "react-native-printer": "^0.0.2",
+    "react-native-print": "^0.11.0",
     "react-native-reanimated": "^2.17.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^3.35.0",
+    "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-thermal-receipt-printer": "^1.2.0-rc.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
