--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "d3-scale": "^4.0.2",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-network-info": "^5.2.1",
@@ -32,10 +34,13 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^12.5.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-thermal-receipt-printer": "^1.2.0-rc.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
