--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/firestore": "^17.5.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
