--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eds_mobile_app",
+  "name": "moneywise",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,10 +12,12 @@
     "clean": "cd android && ./gradlew clean"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/firestore": "^17.5.0",
+    "@react-native-firebase/messaging": "^17.5.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -25,12 +27,14 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-network-info": "^5.2.1",
+    "react-native-pie-chart": "^4.0.1",
     "react-native-print": "^0.11.0",
     "react-native-reanimated": "^2.17.0",
     "react-native-responsive-screen": "^1.4.2",
